--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,4 +9,6 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+      - run: npm ci
       - run: node main.js
