--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -9,6 +9,8 @@ jobs:
   run:
     runs-on: ubuntu-latest
     steps:
+      - run: node -v
+      - run: npm -v
       - uses: actions/checkout@v3
       - run: npm ci
       - run: node main.js
