--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -14,3 +14,5 @@ jobs:
       - uses: actions/checkout@v3
       - run: npm ci
       - run: node main.js
+        env:
+          NOSTR_PRIVATE_KEY: ${{ secrets.NOSTR_PRIVATE_KEY }}
