--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -4,6 +4,11 @@ on:
   schedule:
     - cron: 0 * * * *
   workflow_dispatch:
+  push:
+    branches:
+      - main
+    paths:
+      - .github/workflows/run.yml
 
 jobs:
   run:
