--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -25,6 +25,9 @@ jobs:
         env:
           NOSTR_PRIVATE_KEY: ${{ secrets.NOSTR_PRIVATE_KEY }}
       - uses: snow-actions/git-config-user@v1.0.0
-      - run: git add docs/
-      - run: git commit -m 'Update contacts.json'
-      - run: git push
+      - run: |
+          git add docs/
+          if ! git diff --exit-code --quiet; then
+            git commit -m 'Update contacts.json'
+            git push
+          fi
