--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -27,8 +27,8 @@ jobs:
       - uses: snow-actions/git-config-user@v1.0.0
       - run: |
           set -x
-          git add docs/
-          if ! git diff --exit-code; then
+          if ! git diff --exit-code docs/; then
+            git add docs/
             git commit -m 'Update contacts.json'
             git push
           fi
