--- a/.github/workflows/metadata.yml
+++ b/.github/workflows/metadata.yml
@@ -23,7 +23,7 @@ jobs:
       - id: metadata
         run: echo "json=$(cat metadata.json | jq -c)" >> "$GITHUB_OUTPUT"
       - id: relays
-        run: echo "json=$(cat relays.json | jq -c)" >> "$GITHUB_OUTPUT"
+        run: echo "json=$(cat relays.json | jq -c '[]')" >> "$GITHUB_OUTPUT"
       - uses: snow-actions/nostr@v1.5.0
         with:
           kind: 0
