--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "type": "module",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "nostr-tools": "^1.8.3",
     "websocket-polyfill": "^0.0.3"
   }
