--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -27,6 +27,7 @@ jobs:
       - run: node main.js
         env:
           NOSTR_PRIVATE_KEY: ${{ secrets.NOSTR_PRIVATE_KEY }}
+          NOSTR_WEBHOOK_BASIC_AUTH: ${{ secrets.NOSTR_WEBHOOK_BASIC_AUTH }}
       - uses: snow-actions/git-config-user@v1.0.0
       - run: |
           set -x
